--- a/src/app/components/card/card.component.css
+++ b/src/app/components/card/card.component.css
@@ -6,16 +6,21 @@
 .listing {
     background: var(--accent-color);
     border-radius: 30px;
-    padding-bottom: 30px;
+    /* padding-bottom: 30px; */
+    /* padding-top: -100px; */
+    /* margin-top: -100px; */
+    width: 300px;
+    border: 1px solid black;
+    background-color: #DADADA;
   }
   .listing-heading {
     color: var(--primary-color);
     padding: 10px 20px 0 20px;
   }
   .listing-photo {
-    height: 250px;
+    height: 400px;
     width: 100%;
-    object-fit: cover;
+    object-fit: contain;
     border-radius: 30px 30px 0 0;
   }
   .listing-location {
