--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -19,5 +19,5 @@
     grid-template-columns: repeat(auto-fill, minmax(400px, 400px));
     margin-top: 50px;
     justify-content: space-around;
+    /* width: 1600px; */
   }
-
